fully working except for scopes nad audience and token signing

--- a/front-end-login/index.html
+++ b/front-end-login/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>terrylockett.ca SSO</title>
+    <title>Best Website Evar!! LOGON PAGE</title>
     <script type="module" src="./src/index.tsx"></script>
   </head>
   <body>
