--- a/front-end-testsite/index.html
+++ b/front-end-testsite/index.html
@@ -7,5 +7,7 @@
   <body>
     <h1>Some Website</h1>
     <button id="login">Login with terrylockett.ca</button>
+    <br />
+    <h2 id="error" style="color:red;"></h2>
   </body>
 </html>
