some corrected code

--- a/front-end-testsite/index.html
+++ b/front-end-testsite/index.html
@@ -8,6 +8,8 @@
     <h1>Some Website</h1>
     <button id="login">Login with terrylockett.ca</button>
     <br />
+    <button id="button">Use token</button>
+    <br />
     <h2 id="error" style="color:red;"></h2>
   </body>
 </html>
